# mkbsd-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  simple.rs  verbose.rs
