[package]
name = "mkbsd-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "env"] }
file-format = "0.25.0"
futures = "0.3.30"
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["rustls-tls", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
